--- a/templates/index.html
+++ b/templates/index.html
@@ -6,21 +6,52 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h3>Realtime Bus Positions (Routes: {{ tracked_routes_display }})</h3>
+    <!-- NEW: Menu Bar -->
+    <div id="menu-bar">
+        <button id="btn-operators">Operators</button>
+        <button id="btn-routes" disabled>Routes</button> <!-- Initially disabled -->
+        <!-- <button id="btn-options" disabled>Options</button> Future -->
+        <h3 id="map-title">Realtime Bus Positions</h3> <!-- Title will be dynamic -->
+    </div>
+
+    <!-- Map Container -->
     <div id="map"></div>
 
+    <!-- NEW: Operator Selection Modal -->
+    <div id="operators-modal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <span class="close-button" id="close-operators-modal">×</span>
+            <h2>Select Operators</h2>
+            <div id="operators-list" class="modal-list">
+                <!-- Operator checkboxes will be populated here by JS -->
+            </div>
+            <button id="save-operators">Save & Update</button>
+        </div>
+    </div>
+
+    <!-- NEW: Route Selection Modal -->
+    <div id="routes-modal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <span class="close-button" id="close-routes-modal">×</span>
+            <h2>Select Routes</h2>
+            <div id="selected-routes-list-container">
+                <h4>Selected Routes:</h4>
+                <div id="selected-routes-list" class="modal-list fixed-list">
+                    <!-- Selected routes will appear here -->
+                </div>
+            </div>
+            <hr>
+            <h4>Available Routes:</h4>
+            <input type="text" id="route-search-input" placeholder="Search routes..." style="width: 95%; margin-bottom: 10px;">
+            <div id="available-routes-list" class="modal-list scrollable-list">
+                <!-- Available route checkboxes will be populated here by JS -->
+            </div>
+            <button id="save-routes">Save & Update Map</button>
+        </div>
+    </div>
+
     <!-- Load Google Maps API -->
-    <!-- Note the use of {{ google_maps_api_key }} - Flask injects the key here -->
-    <!-- Added &libraries=marker&v=beta for Advanced Markers -->
-    <!-- <script src="./static/map_logic.js"></script> -->
     <script src="./static/map_logic.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&callback=initMap&libraries=marker&v=beta&loading=async"></script>
-  
-    <!-- Load Google Maps API -->
-    <!-- Note the use of {{ google_maps_api_key }} - Flask injects the key here -->
-    <!-- Added &libraries=marker&v=beta for Advanced Markers -->
-    <!-- <script defer src="{{ url_for('static', filename='map_logic.js') }}"></script> -->
-
-
 </body>
 </html>
