modal options fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
     <!-- NEW: Menu Bar -->
     <div id="menu-bar">
         <button id="btn-operators">Operators</button>
-        <button id="btn-routes" disabled>Routes</button> <!-- Initially disabled -->
-        <!-- <button id="btn-options" disabled>Options</button> Future -->
-        <h3 id="map-title">Realtime Bus Positions</h3> <!-- Title will be dynamic -->
+        <button id="btn-routes" disabled>Routes</button> 
+        <button id="btn-options">Options</button>
+        <h3 id="map-title">Realtime Bus Positions</h3> 
     </div>
 
     <!-- Map Container -->
