--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
             <button id="btn-operators">Operators</button>
             <button id="btn-routes" disabled>Routes</button> 
             <button id="btn-options">Options</button>
-            <div id="small-timer">{{ remaining_time }}</div>
+            <div id="small-timer">{{ remaining_time }}</div> <!-- This was likely a placeholder if not updated by JS -->
             <h3 id="map-title">Realtime Bus Positions</h3> 
         </div>
     </div>
@@ -87,9 +87,8 @@
         </div>
     </div>
 
-
-    <!-- Load Google Maps API -->
-    <script src="./static/map_logic.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&callback=initMap&libraries=marker&v=beta&loading=async"></script>
+    <!-- Main application script - now a module -->
+    <script type="module" src="{{ url_for('static', filename='map_init.js') }}"></script>
+    <!-- The Google Maps API script will be loaded dynamically by map_init.js -->
 </body>
 </html>
