--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
             <button id="btn-operators">Operators</button>
             <button id="btn-routes" disabled>Routes</button> 
             <button id="btn-options">Options</button>
-            <div id="small-timer">{{ remaining_time }}</div> <!-- This was likely a placeholder if not updated by JS -->
+            <div id="small-timer"></div> {# Updated: This is now just a placeholder updated by JS #}
             <h3 id="map-title">Realtime Bus Positions</h3> 
         </div>
     </div>
@@ -19,7 +19,15 @@
     <!-- Map Container -->
     <div id="map"></div>
 
-    <!-- NEW: Operator Selection Modal -->
+    <!-- NEW: Route Visibility Sidebar -->
+    <div id="route-sidebar" style="display:none;">
+        <h4>Tracked Routes</h4>
+        <div id="sidebar-routes-list">
+            <!-- List of tracked routes with checkboxes will be populated here by JS -->
+        </div>
+    </div>
+
+    <!-- EXISTING: Operator Selection Modal -->
     <div id="operators-modal" class="modal" style="display:none;">
         <div class="modal-content">
             <span class="close-button" id="close-operators-modal">×</span>
@@ -31,7 +39,7 @@
         </div>
     </div>
 
-    <!-- NEW: Route Selection Modal -->
+    <!-- EXISTING: Route Selection Modal -->
     <div id="routes-modal" class="modal" style="display:none;">
         <div class="modal-content">
             <span class="close-button" id="close-routes-modal">×</span>
@@ -52,7 +60,7 @@
         </div>
     </div>
 
-    <!-- NEW: Options Modal -->
+    <!-- EXISTING: Options Modal -->
     <div id="options-modal" class="modal" style="display:none;">
         <div class="modal-content">
             <span class="close-button" id="close-options-modal">×</span>
