fixed preview preview

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,8 @@
         <div class="modal-content">
             <span class="close-button" id="close-routes-modal">×</span>
             <h2>Select Routes</h2>
-            <div style="display: flex; justify-content: space-between;"> {/* Flex container for lists and preview */}
-                <div style="flex-basis: 55%;"> {/* Column for lists */}
+            <div style="display: flex; justify-content: space-between;"> 
+                <div style="flex-basis: 55%;"> 
             <div id="selected-routes-list-container">
                 <h4>Selected Routes:</h4>
                 <div id="selected-routes-list" class="modal-list fixed-list">
@@ -52,7 +52,6 @@
                     </div>
                 </div>
                 <div id="route-preview-container" style="flex-basis: 40%; border: 1px solid #ccc; margin-left: 15px; min-height: 200px; display: flex; align-items: center; justify-content: center; text-align: center;">
-                    {/* Preview will be rendered here by JS. Initial text: */}
                     Click an available route to preview its path.
                 </div>
             </div>
