--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,10 @@
     <div id="routes-modal" class="modal" style="display:none;">
         <div class="modal-content">
             <span class="close-button" id="close-routes-modal">×</span>
-            <h2>Select Routes</h2>
+            <!-- <h2>Select Routes</h2> -->
             <div class="routes-modal-body-flex-container" style="display: flex; justify-content: space-between;">
                 <div class="routes-list-column">
+                    <h2>Select Routes</h2>
                     <div id="selected-routes-list-container">
                         <h4>Selected Routes:</h4>
                         <div id="selected-routes-list" class="modal-list fixed-list">
